overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@layer base {
+  html, body {
+    @apply overflow-x-hidden;
+  }
+}
+
+
 a {
   font-weight: 500;
   color: #646cff;
